--- a/src/main/resources/templates/fragments/tablas.html
+++ b/src/main/resources/templates/fragments/tablas.html
@@ -178,11 +178,10 @@
 		</table>
 		<!-- ****** -->		
 		
-		<!-- TABLA MIS LOGROS -->
-	  	<table class="table table-striped table-dark" th:fragment="tablaLogros">
+		<!-- TABLA MIS insigniaS -->
+	  	<table class="table table-striped table-dark" th:fragment="tablaInsignias">
 		  <thead>
 		    <tr>
-		      <th scope="col">Id</th>
 		      <th scope="col">Nombre</th>
 		      <th scope="col">Descripcion</th>
 		      <th scope="col">Variable</th>
@@ -190,29 +189,19 @@
 		      <th scope="col" class="text-center" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">Acciones</th>
 		    </tr>
 		  </thead>
-		  <tbody th:if="${#lists.isEmpty(logros)}">
+		  <tbody th:if="${#lists.isEmpty(insignia)}">
 		    <tr>
-		      <td colspan="5" class="text-center">No hay logros que mostrar</td>
+		      <td colspan="5" class="text-center">No hay insignias que mostrar</td>
 		    </tr>
 		  </tbody>
-		  <tbody th:if="${not #lists.isEmpty(logros)}">
-		    <tr th:each="logro : ${logros}">
-		      <th scope="row" th:text="${logro.id}"></th>
-		      <td><a th:text="${logro.nombre}" th:href="@{/asignatura(idAsignatura=${asignatura.id})}"></a></td>
-		      <td th:text="${logro.descripcion}"></td>
-		      <td th:text="${logro.variable}"></td>
-		      <td th:text="${logro.valor}"></td>	      
+		 <  <tbody th:if="${not #lists.isEmpty(insignia)}">
+		    <tr th:each="insignia : ${insignia}">
+		      <td><a th:text="${insignia.nombre}" th:href="@{/asignatura(idAsignatura=${asignatura.id})}"></a></td>
+		      <td th:text="${insignia.descripcion}"></td>
+		      <td th:text="${insignia.variable}"></td>
+		      <td th:text="${insignia.valor}"></td>	      
 		      <td class="text-center" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
-		      <!--  	<form class="formulario-oculto" th:action="@{/asignatura/modificar-logro}" method="POST">
-					<input type="hidden" name="idAsignatura" th:value="${asignatura.id}" />
-					<input type="hidden" name="idLogro" th:value="${logro.id}" />
-					<a onclick="this.parentNode.submit()" title="Modificar Logro"><i class="material-icons icono-naranja">create</i></a>
-				</form> -->
-		      		  <form class="formulario-oculto" th:action="@{/asignatura/eliminar-logro}" method="POST">
-					<input type="hidden" name="idAsignatura" th:value="${asignatura.id}" />
-					<input type="hidden" name="idLogro" th:value="${logro.id}" />
-					<a onclick="this.parentNode.submit()" title="Eliminar Logro"><i class="material-icons icono-naranja">delete</i></a>
-				</form>
+		      
 		      </td>
 		      <td th:if="${usuario.rol == T(tfg.modelo.Rol).Alumno}" th:text="${asignatura.profesor.nombre} + ' ' + ${asignatura.profesor.apellidos}">		      	
 		      </td>
@@ -226,8 +215,8 @@
 			    <td></td>
 			    <td class="text-center">
 			      	<!-- Button trigger modal -->
-					  <button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevoLogro" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
-						Nuevo logro
+					  <button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevaInsignia" th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
+						Añadir Insignia
 					</button>
 				</td>
 		    </tr>
