--- a/src/main/resources/templates/fragments/modals.html
+++ b/src/main/resources/templates/fragments/modals.html
@@ -133,12 +133,14 @@
 					<input type="text" th:field="*{nombre}" class="form-control"/>
 					<label th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="validation-message error"></label>
 				  </div>
-				   <div class="form-group">
-				  	<label for="descripcion">Descripcion</label>
-					<input type="text" th:field="*{descripcion}" class="form-control"/>
-					<label th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}" class="validation-message error"></label>
-				  </div>
-				
+				<div class="form-group">
+	    				<label for="categoria">Categoria</label>
+	    				<select class="form-control" th:field="*{categoria}">
+	      					<option th:each="categoria : ${T(tfg.modelo.Categoria).values()}"
+                            th:value="${categoria}"
+                            th:text="${categoria}"/>
+	    				</select>
+	 			</div>
 				<div class="form-group">
 	    				<label for="variable">Variable</label>
 	    				<select class="form-control" th:field="*{variable}">
@@ -176,6 +178,8 @@
 				  	<input type="text" th:field="*{premionum}" class="form-control"/>
 				  	<label th:if="${#fields.hasErrors('premionum')}" th:errors="*{premionum}" class="validation-message error"></label>
 				  </div>
+				   
+	 			
 				</form>
 		      </div>
 		      <div class="modal-footer">
