--- a/src/main/resources/templates/fragments/tablas.html
+++ b/src/main/resources/templates/fragments/tablas.html
@@ -150,7 +150,7 @@
 			  </th:block>
 		      <td th:text="${alumno.nombre} + ' ' + ${alumno.apellidos}"></td>
 		      <td th:text="${alumno.puntuacion}"></td>
-		      <td th:text="${alumno.tiempomedio}"></td>
+		      <td th:text="|${alumno.tiempomedio / 1000} s|"></td>
 		      <td th:text="${alumno.porcentaje}"></td>
 		      
 		      <td><i th:each="insignia : ${alumno.insignias}" th:class="'material-icons insignia-' + ${insignia.categoria}" th:title="${insignia.nombre}">stars</i></td>
@@ -186,7 +186,48 @@
 		    </tr>
 		  </tfoot>
 		</table>
-		<!-- ****** -->		
+		<!-- ****** -->
+		
+		
+		<!-- TABLA ANALÍTICAS -->
+	  	<table class="table table-striped table-dark" th:fragment="tablaAnaliticas">
+		  <thead>
+		    <tr>
+		      <th scope="col">Alumno</th>
+		      <th scope="col">Reto</th>
+		      <th scope="col">Pregunta</th>
+		      <th scope="col">Respuesta</th>
+		      <th scope="col">Correcta</th>
+		      <th scope="col">Tiempo</th>
+		    </tr>
+		  </thead>
+		  <tbody th:if="${#lists.isEmpty(resultados)}">
+		    <tr>
+		      <td colspan="6" class="text-center">No hay resultados que mostrar</td>
+		    </tr>
+		  </tbody>
+		  <tbody th:if="${not #lists.isEmpty(resultados)}">
+		    <tr th:each="resultado : ${resultados}">
+		      <td scope="row" th:text="${resultado.alumno}"></td>
+		      <td th:text="${resultado.reto}"></td>
+		      <td th:text="${resultado.pregunta}"></td>
+		      <td th:text="${resultado.respuesta}"></td>
+		      <td> <i th:if="${resultado.correcta}" class="material-icons icono-verde">done</i>
+		      	   <i th:if="${!resultado.correcta}" class="material-icons icono-rojo">clear</i></td>
+		      <td th:text="|${resultado.tiempo} s|"></td>		      
+		    </tr>
+		  </tbody>
+		  <tfoot>
+		  	<tr th:if="${usuario.rol == T(tfg.modelo.Rol).Alumno}">
+		      <td colspan="4" class="text-left" th:text="'Profesor de la asignatura: ' + ${asignatura.profesor.nombre} + ' ' + ${asignatura.profesor.apellidos} + '.'"></td>
+		      <td colspan="2" class="text-right" th:text="' Departamento: ' + ${asignatura.profesor.departamento}  + '. Despacho: ' + ${asignatura.profesor.despacho}"></td>
+		    </tr>
+		    <tr th:if="${usuario.rol == T(tfg.modelo.Rol).Profesor}">
+		    </tr>
+		  </tfoot>
+		</table>
+		<!-- ****** -->
+		
 		
 		<!-- TABLA MIS insigniaS -->
 	  	<table class="table table-striped table-dark" th:fragment="tablaInsignias">
